--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,4 +1,7 @@
 $font: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 $dark: #24292e;
+$darkgrey: #586069;
 $offwhite: #fafbfc;
 $blue: #0366d6;
+$orange: #e36209;
+$bordercolor: #e1e4e8;
