--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -5,3 +5,7 @@ $offwhite: #fafbfc;
 $blue: #0366d6;
 $orange: #e36209;
 $bordercolor: #e1e4e8;
+$tablebackground: #f6f8fa;
+
+$medium: 62rem;
+$small: 30rem;
