--- a/src/assets/scss/_general.scss
+++ b/src/assets/scss/_general.scss
@@ -1,7 +1,10 @@
 html,body{
     font-size: 16px;
     margin: 0;
-    height: 100%;;
+    height: 100%;
+    @media (max-width: $small){
+        font-size: 13px;
+    }
 }
 #root{
     height: 100%;
@@ -15,12 +18,18 @@ html,body{
 }
 a{
     cursor: pointer;
+    text-decoration: none;
 }
 .flex-container{
     display: flex;
 }
 .flex-column{
     flex-direction: column;
+}
+.flex-small-column{
+    @media (max-width: $small){
+        flex-direction: column;
+    }
 }
 .flex-grow{
     flex-grow: 1;
@@ -37,6 +46,12 @@ a{
 .row{
     max-width: 62rem;
     margin: auto;
+    @media (max-width: $medium){
+        max-width: 37rem;
+    }
+    @media (max-width: $small){
+        max-width: 22rem;
+    }
 }
 .dark{
     color: $dark;
@@ -49,4 +64,7 @@ a{
 }
 .bold{
     font-weight: bold;
+}
+.text-center{
+    text-align: center;
 }
